<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/C1_blue"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/Logo"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="@dimen/g_top_margin"
            android:contentDescription="@string/desc_doit4you_icon"
            android:src="@mipmap/gmspps" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/title_text"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="36sp" />
        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Version"
            android:textColor="@android:color/white"
            android:textSize="@dimen/abc_text_size_small_material" />
        <LinearLayout
            android:id="@+id/ProviderList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:visibility="gone"
            android:weightSum="2"
            tools:visibility="gone">

            <ListView
                android:id="@+id/Plist"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:divider="#b5b5b5"
                android:dividerHeight="1dp"
                android:listSelector="@drawable/list_selector" />
        </LinearLayout>


        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signed_out"
            android:textColor="@android:color/white"
            android:textSize="@dimen/abc_text_size_small_material" />


        <ProgressBar
            android:layout_width="50dp"
            android:id="@+id/progressBar1"
            android:layout_height="wrap_content"></ProgressBar>

    </LinearLayout>




    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:layout_weight="0.64"
        android:background="@color/blue_grey_900"
        android:layout_gravity="top">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:visibility="visible"
            tools:visibility="gone" />

        <LinearLayout
            android:id="@+id/sign_out_and_disconnect"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:visibility="gone"
            android:weightSum="2"
            tools:visibility="visible">


            <Button
                android:id="@+id/disconnect_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/disconnect"
                android:textColor="@android:color/white"
                android:theme="@style/ThemeOverlay.MyDarkButton" />
        </LinearLayout>


    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_weight="0.90"
        android:background="@color/blue_grey_900"
        android:layout_gravity="top">
        <LinearLayout
            android:id="@+id/state_panel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:visibility="gone"
            android:weightSum="2"
            tools:visibility="visible">

            <Button
                android:id="@+id/State_1_button"
                android:paddingLeft="6dp"

                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/st1_button"
                android:textColor="@android:color/white"
                android:theme="@style/ThemeOverlay.MyDarkButton"
                android:background="@color/C1_blue"/>

            <Button
                android:id="@+id/State_2_button"
                android:paddingLeft="6dp"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/st2_button"
                android:textColor="@android:color/white"
                android:theme="@style/ThemeOverlay.MyDarkButton"
                android:background="@color/C1_graygreen"/>
            <Button
                android:id="@+id/State_3_button"
                android:paddingLeft="6dp"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/st3_button"
                android:textColor="@android:color/white"
                android:theme="@style/ThemeOverlay.MyDarkButton"
                android:background="@color/C1_red"/>

            <Button
                android:id="@+id/State_4_button"
                android:paddingLeft="6dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/st4_button"
                android:textColor="@android:color/white"
                android:theme="@style/ThemeOverlay.MyDarkButton"
                android:background="@color/C1_yellow"/>
            <Button
                android:id="@+id/State_6_button"
                android:paddingLeft="6dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/st6_button"
                android:textColor="@android:color/white"
                android:theme="@style/ThemeOverlay.MyDarkButton"
                android:background="@color/C1_yellow"/>
            <Button
                android:id="@+id/gotomision"
                android:paddingLeft="6dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="Mission"
                android:textColor="@android:color/white"
                android:theme="@style/ThemeOverlay.MyDarkButton"
                android:background="@color/C1_yellow"/>
        </LinearLayout>


    </RelativeLayout>
    <LinearLayout
        android:id="@+id/status_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_centerInParent="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Status: "
            android:textColor="@android:color/white"
            android:layout_centerInParent="true"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/statusInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/st1_button"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
